fix(quality): QA fixes